--- a/index.html
+++ b/index.html
@@ -424,7 +424,6 @@
   <script src="https://cdn.jsdelivr.net/gh/wugenqiang/NoteBook@master/plugin/zoom-image.min.js"></script>
 
   <link rel="stylesheet" href="//unpkg.com/gitalk/dist/gitalk.css">
-
   <script src="//unpkg.com/docsify/lib/plugins/gitalk.min.js"></script>
   <script src="//unpkg.com/gitalk/dist/gitalk.min.js"></script>
   <script>
@@ -434,9 +433,12 @@
       repo: 'weshare2025/weshare.github.io',
       owner: 'weshare2025',
       admin: ['weshare2025'],
-    // facebook-like distraction free mode
-      distractionFreeMode: false
-    })
+      // facebook-like distraction free mode
+      distractionFreeMode: false,
+      id: location.pathname // 确保每个页面有唯一的 id
+    });
+
+    gitalk.render('gitalk-container'); // 这里的 'gitalk-container' 要和 friend.md 中 div 的 id 一致
   </script>
 
   <!-- 支持 DOT 语言 -->
