--- a/index.html
+++ b/index.html
@@ -429,8 +429,8 @@
   <script>
     const gitalk = new Gitalk({
       clientID: 'Ov23liNJ09tTXLamxeyx',
-      clientSecret: '3b56cac0d48b686cdd95a82154d1c318a4fbf11b',
-      repo: 'weshare2025/weshare.github.io',
+      clientSecret: '4929f328122bbf13fd03738e96b45ab02faba8ea',
+      repo: 'weshare2025/comments',
       owner: 'weshare2025',
       admin: ['weshare2025'],
       // facebook-like distraction free mode
