--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
     const gitalk = new Gitalk({
       clientID: 'Ov23liNJ09tTXLamxeyx',
       clientSecret: '4929f328122bbf13fd03738e96b45ab02faba8ea',
-      repo: 'comments',
+      repo: 'weshare2025/comments',
       owner: 'weshare2025',
       admin: ['weshare2025'],
       // facebook-like distraction free mode
