--- a/index.html
+++ b/index.html
@@ -438,6 +438,7 @@
     });
 
     gitalk.render('gitalk-container'); // 这里的 'gitalk-container' 要和 friend.md 中 div 的 id 一致
+    <div id="gitalk-container"></div>
   </script>
 
   <!-- 支持 DOT 语言 -->
