--- a/index.html
+++ b/index.html
@@ -427,6 +427,7 @@
   <script src="https://unpkg.com/gitalk/dist/gitalk.min.js"></script>
   <script>
     const gitalk = new Gitalk({
+      enable:true
       clientID: 'Ov23liNJ09tTXLamxeyx',
       clientSecret: '044cb9dadbe396753637ef9290d7f67cd7a7803f',
       repo: 'talks',
