--- a/index.html
+++ b/index.html
@@ -365,6 +365,10 @@
       coverpage: true,
       onlyCover: true,
       topMargin: 60,//调整top
+      cusdis: {
+      host: 'https://cusdis.com',
+      appId: '10fe78f3-a2fe-40ae-ae24-01c802e6643c',
+      },
       //executeScript: true,//执行页面上的脚本，仅解析第一个脚本标签
       footer: {
         copy: 'We接力，让竞赛分享永不掉线 —— <a href="https://github.com/weshare2025" target="_blank">WeShare</a><br/><br/>',
@@ -422,7 +426,9 @@
   </script>
   <script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/wugenqiang/NoteBook@master/plugin/zoom-image.min.js"></script>
-
+  <script src="//cdn.jsdelivr.net/npm/docsify@4"></script> <!-- docsify核心库 -->
+  <script src="https://cusdis.com/js/cusdis.docsify.js"></script> <!-- cusdis核心库 -->
+<!--
   <link rel="stylesheet" href="https://unpkg.com/gitalk/dist/gitalk.css">
   <script src="https://unpkg.com/gitalk/dist/gitalk.min.js"></script>
   <script>
@@ -441,7 +447,7 @@
     gitalk.render('gitalk-container'); // 这里的 'gitalk-container' 要和 friend.md 中 div 的 id 一致
     <div id="gitalk-container"></div>
   </script>
-
+-->
   <!-- 支持 DOT 语言 -->
   <script src="https://cdn.jsdelivr.net/gh/wugenqiang/NoteBook@master/plugin/viz.js"></script>
   <!-- 支持 LaTex 语言 -->
