--- a/index.html
+++ b/index.html
@@ -426,28 +426,9 @@
   </script>
   <script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/wugenqiang/NoteBook@master/plugin/zoom-image.min.js"></script>
-  <script src="//cdn.jsdelivr.net/npm/docsify@4"></script> <!-- docsify核心库 -->
+  <!-- <script src="//cdn.jsdelivr.net/npm/docsify@4"></script> <!-- docsify核心库 -->
   <script src="https://cusdis.com/js/cusdis.docsify.js"></script> <!-- cusdis核心库 -->
-<!--
-  <link rel="stylesheet" href="https://unpkg.com/gitalk/dist/gitalk.css">
-  <script src="https://unpkg.com/gitalk/dist/gitalk.min.js"></script>
-  <script>
-    const gitalk = new Gitalk({
-      enable:true
-      clientID: 'Ov23liNJ09tTXLamxeyx',
-      clientSecret: 'efb8f74a17b84771f0e1d619979159e5b20bd3d7',
-      repo: 'talks',
-      owner: 'weshare2025',
-      admin: ['weshare2025'],
-      // facebook-like distraction free mode
-      distractionFreeMode: false,
-      id: location.pathname // 确保每个页面有唯一的 id
-    });
 
-    gitalk.render('gitalk-container'); // 这里的 'gitalk-container' 要和 friend.md 中 div 的 id 一致
-    <div id="gitalk-container"></div>
-  </script>
--->
   <!-- 支持 DOT 语言 -->
   <script src="https://cdn.jsdelivr.net/gh/wugenqiang/NoteBook@master/plugin/viz.js"></script>
   <!-- 支持 LaTex 语言 -->
