--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
     <div class="advertisement">
       <div class="Tencent_code">
         <h4>WeShare</h4>
-        <img src="https://weshare.xin/cover.png" alt="WeShare" />
+        <img src="https://weshare.xin/cover2.jpg" alt="WeShare" />
       </div>
     </div>
 </div>
