--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
     <div class="advertisement">
       <div class="Tencent_code">
         <h4>WeShare</h4>
-        <img src="https://weshare.xin/cover2.jpg" alt="WeShare" />
+        <img src="https://weshare.xin/cover.png" alt="WeShare" />
       </div>
     </div>
 </div>
@@ -371,10 +371,6 @@
         pre: '<hr/>',
         style: 'text-align: left;',
       },//添加页脚
-      cusdis: {
-      host: 'https://cusdis.com',
-      appId: '3a072c3e-6af5-404d-8f3b-f007f53f6395',
-      },
 
       markdown: {
         renderer: {
@@ -426,8 +422,6 @@
   </script>
   <script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/wugenqiang/NoteBook@master/plugin/zoom-image.min.js"></script>
-  <!-- <script src="//cdn.jsdelivr.net/npm/docsify@4"></script> <!-- docsify核心库 -->
-  <script src="https://cusdis.com/js/cusdis.docsify.js"></script> <!-- cusdis核心库 -->
 
   <!-- 支持 DOT 语言 -->
   <script src="https://cdn.jsdelivr.net/gh/wugenqiang/NoteBook@master/plugin/viz.js"></script>
