--- a/index.html
+++ b/index.html
@@ -342,8 +342,8 @@
 <div class="aside_container">
     <div class="advertisement">
       <div class="Tencent_code">
-        <h4>WeShare</h4>
-        <img src="https://weshare.xin/cover.png" alt="WeShare" />
+        <h4>WeShare公众号</h4>
+        <img src="https://weshare.xin/gongzhonghao.jpg" alt="WeShare" />
       </div>
     </div>
 </div>
